Refer to DOIs and DBLPs in a uniform way

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -1,81 +1,81 @@
 ## Computer Aided Verification - 30th International Conference, CAV 2018, Proceedings Part II
 #classified
 ---
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_24) Constrained Dynamic Partial Order Reduction.
-	[Elvira Albert](https://dblp.uni-trier.de/pid/a/ElviraAlbert.html), [Miguel Gómez-Zamalloa](https://dblp.uni-trier.de/pid/26/669.html), [Miguel Isabel](https://dblp.uni-trier.de/pid/177/0262.html), [Albert Rubio](https://dblp.uni-trier.de/pid/29/6684.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_24) Constrained Dynamic Partial Order Reduction.
+	[Elvira Albert](https://dblp.org/pid/a/ElviraAlbert.html), [Miguel Gómez-Zamalloa](https://dblp.org/pid/26/669.html), [Miguel Isabel](https://dblp.org/pid/177/0262.html), [Albert Rubio](https://dblp.org/pid/29/6684.html)
 	Implemented in [[SYCO]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_1) Let this Graph Be Your Witness! - An Attestor for Verifying Java Pointer Programs.
-	[Hannah Arndt](https://dblp.uni-trier.de/pid/200/7994.html), [Christina Jansen](https://dblp.uni-trier.de/pid/75/9687.html), [Joost-Pieter Katoen](https://dblp.uni-trier.de/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.uni-trier.de/pid/172/5070.html), [Thomas Noll](https://dblp.uni-trier.de/pid/31/248-1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_1) Let this Graph Be Your Witness! - An Attestor for Verifying Java Pointer Programs.
+	[Hannah Arndt](https://dblp.org/pid/200/7994.html), [Christina Jansen](https://dblp.org/pid/75/9687.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Thomas Noll](https://dblp.org/pid/31/248-1.html)
 	Implemented in [[Attestor]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_9) Automata vs Linear-Programming Discounted-Sum Inclusion.
-	[Suguman Bansal](https://dblp.uni-trier.de/pid/217/4777.html), [Swarat Chaudhuri](https://dblp.uni-trier.de/pid/37/6100.html), [Moshe Y. Vardi](https://dblp.uni-trier.de/pid/v/MosheYVardi.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_9) Automata vs Linear-Programming Discounted-Sum Inclusion.
+	[Suguman Bansal](https://dblp.org/pid/217/4777.html), [Swarat Chaudhuri](https://dblp.org/pid/37/6100.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
 	Implemented in [[DetLP]] and [[QuIP]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_10) Model Checking Indistinguishability of Randomized Security Protocols.
-	[Matthew S. Bauer](https://dblp.uni-trier.de/pid/46/8261.html), [Rohit Chadha](https://dblp.uni-trier.de/pid/c/RohitChadha.html), [A. Prasad Sistla](https://dblp.uni-trier.de/pid/s/APrasadSistla.html), [Mahesh Viswanathan](https://dblp.uni-trier.de/pid/23/2759-1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_10) Model Checking Indistinguishability of Randomized Security Protocols.
+	[Matthew S. Bauer](https://dblp.org/pid/46/8261.html), [Rohit Chadha](https://dblp.org/pid/c/RohitChadha.html), [A. Prasad Sistla](https://dblp.org/pid/s/APrasadSistla.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
 	Implemented in [[Span]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_6) [[StringFuzz]] - A Fuzzer for String Solvers.
-	[Dmitry Blotsky](https://dblp.uni-trier.de/pid/223/5185.html), [Federico Mora](https://dblp.uni-trier.de/pid/82/5093.html), [Murphy Berzish](https://dblp.uni-trier.de/pid/180/5429.html), [Yunhui Zheng](https://dblp.uni-trier.de/pid/47/702.html), [Ifaz Kabir](https://dblp.uni-trier.de/pid/202/2276.html), [Vijay Ganesh](https://dblp.uni-trier.de/pid/g/VijayGanesh.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_23) On the Completeness of Verifying Message Passing Programs Under Bounded Asynchrony.
-	[Ahmed Bouajjani](https://dblp.uni-trier.de/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.uni-trier.de/pid/72/2839.html), [Kailiang Ji](https://dblp.uni-trier.de/pid/166/0923.html), [Shaz Qadeer](https://dblp.uni-trier.de/pid/q/ShazQadeer.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_21) Reasoning About TSO Programs Using Reduction and Abstraction.
-	[Ahmed Bouajjani](https://dblp.uni-trier.de/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.uni-trier.de/pid/72/2839.html), [Suha Orhun Mutluergil](https://dblp.uni-trier.de/pid/170/4198.html), [Serdar Tasiran](https://dblp.uni-trier.de/pid/88/1444.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_6) [[StringFuzz]] - A Fuzzer for String Solvers.
+	[Dmitry Blotsky](https://dblp.org/pid/223/5185.html), [Federico Mora](https://dblp.org/pid/82/5093.html), [Murphy Berzish](https://dblp.org/pid/180/5429.html), [Yunhui Zheng](https://dblp.org/pid/47/702.html), [Ifaz Kabir](https://dblp.org/pid/202/2276.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_23) On the Completeness of Verifying Message Passing Programs Under Bounded Asynchrony.
+	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Kailiang Ji](https://dblp.org/pid/166/0923.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_21) Reasoning About TSO Programs Using Reduction and Abstraction.
+	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Suha Orhun Mutluergil](https://dblp.org/pid/170/4198.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html)
 	Checked soundness of abstractions with CIVL
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_13) Symbolic Algorithms for Graphs and Markov Decision Processes with Fairness Objectives.
-	[Krishnendu Chatterjee](https://dblp.uni-trier.de/pid/92/5602.html), [Monika Henzinger](https://dblp.uni-trier.de/pid/h/MonikaRauchHenzinger.html), [Veronika Loitzenbauer](https://dblp.uni-trier.de/pid/132/9047.html), [Simin Oraee](https://dblp.uni-trier.de/pid/218/5331.html), [Viktor Toman](https://dblp.uni-trier.de/pid/215/3408.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_29) Android Stack Machine.
-	[Taolue Chen](https://dblp.uni-trier.de/pid/28/4743.html), [Jinlong He](https://dblp.uni-trier.de/pid/204/0042.html), [Fu Song](https://dblp.uni-trier.de/pid/09/10016.html), [Guozhen Wang](https://dblp.uni-trier.de/pid/223/5357.html), [Zhilin Wu](https://dblp.uni-trier.de/pid/71/3710.html), [Jun Yan](https://dblp.uni-trier.de/pid/89/5901.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_4) The [[DEEPSEC]] Prover.
-	[Vincent Cheval](https://dblp.uni-trier.de/pid/62/8336.html), [Steve Kremer](https://dblp.uni-trier.de/pid/k/SteveKremer.html), [Itsaka Rakotonirina](https://dblp.uni-trier.de/pid/223/5215.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_26) Continuous Formal Verification of Amazon s2n.
-	[Andrey Chudnov](https://dblp.uni-trier.de/pid/94/3130.html), [Nathan Collins](https://dblp.uni-trier.de/pid/65/10809.html), [Byron Cook](https://dblp.uni-trier.de/pid/36/113.html), [Joey Dodds](https://dblp.uni-trier.de/pid/223/5187.html), [Brian Huffman](https://dblp.uni-trier.de/pid/69/3465.html), [Colm MacCárthaigh](https://dblp.uni-trier.de/pid/223/4997.html), [Stephen Magill](https://dblp.uni-trier.de/pid/30/5360.html), [Eric Mertens](https://dblp.uni-trier.de/pid/143/2709.html), [Eric Mullen](https://dblp.uni-trier.de/pid/19/9842.html), [Serdar Tasiran](https://dblp.uni-trier.de/pid/88/1444.html), [Aaron Tomb](https://dblp.uni-trier.de/pid/91/466.html), [Eddy Westbrook](https://dblp.uni-trier.de/pid/223/5374.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_28) Model Checking Boot Code from AWS Data Centers.
-	[Byron Cook](https://dblp.uni-trier.de/pid/36/113.html), [Kareem Khazem](https://dblp.uni-trier.de/pid/178/2891.html), [Daniel Kroening](https://dblp.uni-trier.de/pid/k/DanielKroening.html), [Serdar Tasiran](https://dblp.uni-trier.de/pid/88/1444.html), [Michael Tautschnig](https://dblp.uni-trier.de/pid/18/1323.html), [Mark R. Tuttle](https://dblp.uni-trier.de/pid/t/MarkRTuttle.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_13) Symbolic Algorithms for Graphs and Markov Decision Processes with Fairness Objectives.
+	[Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Monika Henzinger](https://dblp.org/pid/h/MonikaRauchHenzinger.html), [Veronika Loitzenbauer](https://dblp.org/pid/132/9047.html), [Simin Oraee](https://dblp.org/pid/218/5331.html), [Viktor Toman](https://dblp.org/pid/215/3408.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_29) Android Stack Machine.
+	[Taolue Chen](https://dblp.org/pid/28/4743.html), [Jinlong He](https://dblp.org/pid/204/0042.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Guozhen Wang](https://dblp.org/pid/223/5357.html), [Zhilin Wu](https://dblp.org/pid/71/3710.html), [Jun Yan](https://dblp.org/pid/89/5901.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_4) The [[DEEPSEC]] Prover.
+	[Vincent Cheval](https://dblp.org/pid/62/8336.html), [Steve Kremer](https://dblp.org/pid/k/SteveKremer.html), [Itsaka Rakotonirina](https://dblp.org/pid/223/5215.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_26) Continuous Formal Verification of Amazon s2n.
+	[Andrey Chudnov](https://dblp.org/pid/94/3130.html), [Nathan Collins](https://dblp.org/pid/65/10809.html), [Byron Cook](https://dblp.org/pid/36/113.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Colm MacCárthaigh](https://dblp.org/pid/223/4997.html), [Stephen Magill](https://dblp.org/pid/30/5360.html), [Eric Mertens](https://dblp.org/pid/143/2709.html), [Eric Mullen](https://dblp.org/pid/19/9842.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html), [Aaron Tomb](https://dblp.org/pid/91/466.html), [Eddy Westbrook](https://dblp.org/pid/223/5374.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_28) Model Checking Boot Code from AWS Data Centers.
+	[Byron Cook](https://dblp.org/pid/36/113.html), [Kareem Khazem](https://dblp.org/pid/178/2891.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html), [Michael Tautschnig](https://dblp.org/pid/18/1323.html), [Mark R. Tuttle](https://dblp.org/pid/t/MarkRTuttle.html)
 	Implemented in [[CBMC]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_8) Program Analysis Is Harder Than Verification - A Computability Perspective.
-	[Patrick Cousot](https://dblp.uni-trier.de/pid/c/PCousot.html), [Roberto Giacobazzi](https://dblp.uni-trier.de/pid/g/RobertoGiacobazzi.html), [Francesco Ranzato](https://dblp.uni-trier.de/pid/r/FRanzato.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_14) Attracting Tangles to Solve Parity Games.
-	[Tom van Dijk](https://dblp.uni-trier.de/pid/126/8210.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_8) Program Analysis Is Harder Than Verification - A Computability Perspective.
+	[Patrick Cousot](https://dblp.org/pid/c/PCousot.html), [Roberto Giacobazzi](https://dblp.org/pid/g/RobertoGiacobazzi.html), [Francesco Ranzato](https://dblp.org/pid/r/FRanzato.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_14) Attracting Tangles to Solve Parity Games.
+	[Tom van Dijk](https://dblp.org/pid/126/8210.html)
 	Implemented in [[Oink]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_7) Permission Inference for Array Programs.
-	[Jérôme Dohrau](https://dblp.uni-trier.de/pid/156/9072.html), [Alexander J. Summers](https://dblp.uni-trier.de/pid/76/5160.html), [Caterina Urban](https://dblp.uni-trier.de/pid/130/9842.html), [Severin Münger](https://dblp.uni-trier.de/pid/218/5563.html), [Peter Müller](https://dblp.uni-trier.de/pid/m/PMuller1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_7) Permission Inference for Array Programs.
+	[Jérôme Dohrau](https://dblp.org/pid/156/9072.html), [Alexander J. Summers](https://dblp.org/pid/76/5160.html), [Caterina Urban](https://dblp.org/pid/130/9842.html), [Severin Münger](https://dblp.org/pid/218/5563.html), [Peter Müller](https://dblp.org/pid/m/PMuller1.html)
 	Tool: [[Sample]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_19) Model Generation for Quantified Formulas - A Taint-Based Approach.
-	[Benjamin Farinier](https://dblp.uni-trier.de/pid/215/4462.html), [Sébastien Bardin](https://dblp.uni-trier.de/pid/b/SebastienBardin.html), [Richard Bonichon](https://dblp.uni-trier.de/pid/75/3724.html), [Marie-Laure Potet](https://dblp.uni-trier.de/pid/37/5694.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_19) Model Generation for Quantified Formulas - A Taint-Based Approach.
+	[Benjamin Farinier](https://dblp.org/pid/215/4462.html), [Sébastien Bardin](https://dblp.org/pid/b/SebastienBardin.html), [Richard Bonichon](https://dblp.org/pid/75/3724.html), [Marie-Laure Potet](https://dblp.org/pid/37/5694.html)
 	Implemented in [[TFML]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_3) The [[JKind]] Model Checker.
-	[Andrew Gacek](https://dblp.uni-trier.de/pid/84/6151.html), [John Backes](https://dblp.uni-trier.de/pid/97/8857.html), [Mike Whalen](https://dblp.uni-trier.de/pid/70/5189.html), [Lucas G. Wagner](https://dblp.uni-trier.de/pid/94/7566.html), [Elaheh Ghassabani](https://dblp.uni-trier.de/pid/172/4689.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_31) Inner and Outer Approximating Flowpipes for Delay Differential Equations.
-	[Eric Goubault](https://dblp.uni-trier.de/pid/90/1132.html), [Sylvie Putot](https://dblp.uni-trier.de/pid/61/1269.html), [Lorenz Sahlmann](https://dblp.uni-trier.de/pid/223/5310.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_2) MaxSMT-Based Type Inference for Python 3.
-	[Mostafa Hassan](https://dblp.uni-trier.de/pid/223/5094.html), [Caterina Urban](https://dblp.uni-trier.de/pid/130/9842.html), [Marco Eilers](https://dblp.uni-trier.de/pid/217/4745.html), [Peter Müller](https://dblp.uni-trier.de/pid/m/PMuller1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_3) The [[JKind]] Model Checker.
+	[Andrew Gacek](https://dblp.org/pid/84/6151.html), [John Backes](https://dblp.org/pid/97/8857.html), [Mike Whalen](https://dblp.org/pid/70/5189.html), [Lucas G. Wagner](https://dblp.org/pid/94/7566.html), [Elaheh Ghassabani](https://dblp.org/pid/172/4689.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_31) Inner and Outer Approximating Flowpipes for Delay Differential Equations.
+	[Eric Goubault](https://dblp.org/pid/90/1132.html), [Sylvie Putot](https://dblp.org/pid/61/1269.html), [Lorenz Sahlmann](https://dblp.org/pid/223/5310.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_2) MaxSMT-Based Type Inference for Python 3.
+	[Mostafa Hassan](https://dblp.org/pid/223/5094.html), [Caterina Urban](https://dblp.org/pid/130/9842.html), [Marco Eilers](https://dblp.org/pid/217/4745.html), [Peter Müller](https://dblp.org/pid/m/PMuller1.html)
 	Tool: [[Typpete]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_15) Delta-Decision Procedures for Exists-Forall Problems over the Reals.
-	[Soonho Kong](https://dblp.uni-trier.de/pid/43/7541.html), [Armando Solar-Lezama](https://dblp.uni-trier.de/pid/95/6919.html), [Sicun Gao](https://dblp.uni-trier.de/pid/22/8296.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_15) Delta-Decision Procedures for Exists-Forall Problems over the Reals.
+	[Soonho Kong](https://dblp.org/pid/43/7541.html), [Armando Solar-Lezama](https://dblp.org/pid/95/6919.html), [Sicun Gao](https://dblp.org/pid/22/8296.html)
 	Built on top of [[dReal]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_5) [[SimpleCAR]] - An Efficient Bug-Finding Tool Based on Approximate Reachability.
-	[Jianwen Li](https://dblp.uni-trier.de/pid/21/8669.html), [Rohit Dureja](https://dblp.uni-trier.de/pid/208/7416.html), [Geguang Pu](https://dblp.uni-trier.de/pid/33/1678.html), [Kristin Yvonne Rozier](https://dblp.uni-trier.de/pid/67/519.html), [Moshe Y. Vardi](https://dblp.uni-trier.de/pid/v/MosheYVardi.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_22) Quasi-Optimal Partial Order Reduction.
-	[Huyen T. T. Nguyen](https://dblp.uni-trier.de/pid/215/3598.html), [César Rodríguez](https://dblp.uni-trier.de/pid/74/9958.html), [Marcelo Sousa](https://dblp.uni-trier.de/pid/123/7772.html), [Camille Coti](https://dblp.uni-trier.de/pid/78/4708.html), [Laure Petrucci](https://dblp.uni-trier.de/pid/p/LaurePetrucci.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_5) [[SimpleCAR]] - An Efficient Bug-Finding Tool Based on Approximate Reachability.
+	[Jianwen Li](https://dblp.org/pid/21/8669.html), [Rohit Dureja](https://dblp.org/pid/208/7416.html), [Geguang Pu](https://dblp.org/pid/33/1678.html), [Kristin Yvonne Rozier](https://dblp.org/pid/67/519.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_22) Quasi-Optimal Partial Order Reduction.
+	[Huyen T. T. Nguyen](https://dblp.org/pid/215/3598.html), [César Rodríguez](https://dblp.org/pid/74/9958.html), [Marcelo Sousa](https://dblp.org/pid/123/7772.html), [Camille Coti](https://dblp.org/pid/78/4708.html), [Laure Petrucci](https://dblp.org/pid/p/LaurePetrucci.html)
 	Implemented in [[DPU]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_16) Solving Quantified Bit-Vectors Using Invertibility Conditions.
-	[Aina Niemetz](https://dblp.uni-trier.de/pid/115/4373.html), [Mathias Preiner](https://dblp.uni-trier.de/pid/115/4371.html), [Andrew Reynolds](https://dblp.uni-trier.de/pid/41/9861.html), [Clark W. Barrett](https://dblp.uni-trier.de/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.uni-trier.de/pid/37/4921.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_16) Solving Quantified Bit-Vectors Using Invertibility Conditions.
+	[Aina Niemetz](https://dblp.org/pid/115/4373.html), [Mathias Preiner](https://dblp.org/pid/115/4371.html), [Andrew Reynolds](https://dblp.org/pid/41/9861.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.org/pid/37/4921.html)
 	Implemented in [[CVC4]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_17) Understanding and Extending Incremental Determinization for 2QBF.
-	[Markus N. Rabe](https://dblp.uni-trier.de/pid/88/1112-2.html), [Leander Tentrup](https://dblp.uni-trier.de/pid/143/2715.html), [Cameron Rasmussen](https://dblp.uni-trier.de/pid/223/5057.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_17) Understanding and Extending Incremental Determinization for 2QBF.
+	[Markus N. Rabe](https://dblp.org/pid/88/1112-2.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html), [Cameron Rasmussen](https://dblp.org/pid/223/5057.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
 	Implemented as extension of [[CADET]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_18) The Proof Complexity of SMT Solvers.
-	[Robert Robere](https://dblp.uni-trier.de/pid/122/2714.html), [Antonina Kolokolova](https://dblp.uni-trier.de/pid/91/5785.html), [Vijay Ganesh](https://dblp.uni-trier.de/pid/g/VijayGanesh.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_27) Symbolic Liveness Analysis of Real-World Software.
-	[Daniel Schemmel](https://dblp.uni-trier.de/pid/119/0975.html), [Julian Büning](https://dblp.uni-trier.de/pid/223/5126.html), [Oscar Soria Dustmann](https://dblp.uni-trier.de/pid/89/8919.html), [Thomas Noll](https://dblp.uni-trier.de/pid/31/248-1.html), [Klaus Wehrle](https://dblp.uni-trier.de/pid/w/KlausWehrle.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_18) The Proof Complexity of SMT Solvers.
+	[Robert Robere](https://dblp.org/pid/122/2714.html), [Antonina Kolokolova](https://dblp.org/pid/91/5785.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_27) Symbolic Liveness Analysis of Real-World Software.
+	[Daniel Schemmel](https://dblp.org/pid/119/0975.html), [Julian Büning](https://dblp.org/pid/223/5126.html), [Oscar Soria Dustmann](https://dblp.org/pid/89/8919.html), [Thomas Noll](https://dblp.org/pid/31/248-1.html), [Klaus Wehrle](https://dblp.org/pid/w/KlausWehrle.html)
 	Implemented in [[Symbolic Liveness Analysis]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_25) Formal Verification of a Vehicle-to-Vehicle (V2V) Messaging System.
-	[Mark Tullsen](https://dblp.uni-trier.de/pid/95/6125.html), [Lee Pike](https://dblp.uni-trier.de/pid/p/LeePike.html), [Nathan Collins](https://dblp.uni-trier.de/pid/65/10809.html), [Aaron Tomb](https://dblp.uni-trier.de/pid/91/466.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_30) Formally Verified Montgomery Multiplication.
-	[Christoph Walther](https://dblp.uni-trier.de/pid/w/ChristophWalther.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_11) Lazy Self-composition for Security Verification.
-	[Weikun Yang](https://dblp.uni-trier.de/pid/167/0229.html), [Yakir Vizel](https://dblp.uni-trier.de/pid/86/2578.html), [Pramod Subramanyan](https://dblp.uni-trier.de/pid/27/8110.html), [Aarti Gupta](https://dblp.uni-trier.de/pid/18/2229.html), [Sharad Malik](https://dblp.uni-trier.de/pid/79/6934.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_25) Formal Verification of a Vehicle-to-Vehicle (V2V) Messaging System.
+	[Mark Tullsen](https://dblp.org/pid/95/6125.html), [Lee Pike](https://dblp.org/pid/p/LeePike.html), [Nathan Collins](https://dblp.org/pid/65/10809.html), [Aaron Tomb](https://dblp.org/pid/91/466.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_30) Formally Verified Montgomery Multiplication.
+	[Christoph Walther](https://dblp.org/pid/w/ChristophWalther.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_11) Lazy Self-composition for Security Verification.
+	[Weikun Yang](https://dblp.org/pid/167/0229.html), [Yakir Vizel](https://dblp.org/pid/86/2578.html), [Pramod Subramanyan](https://dblp.org/pid/27/8110.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html), [Sharad Malik](https://dblp.org/pid/79/6934.html)
 	Implemented [[IFC-CEGAR]] and [[IFC-BMC]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_20) Partial Order Aware Concurrency Sampling.
-	[Xinhao Yuan](https://dblp.uni-trier.de/pid/70/10355.html), [Junfeng Yang](https://dblp.uni-trier.de/pid/71/3724.html), [Ronghui Gu](https://dblp.uni-trier.de/pid/155/8148.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96142-2_12) [[SCInfer]] - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
-	[Jun Zhang](https://dblp.uni-trier.de/pid/29/4190.html), [Pengfei Gao](https://dblp.uni-trier.de/pid/147/0949.html), [Fu Song](https://dblp.uni-trier.de/pid/09/10016.html), [Chao Wang](https://dblp.uni-trier.de/pid/w/ChaoWang.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_20) Partial Order Aware Concurrency Sampling.
+	[Xinhao Yuan](https://dblp.org/pid/70/10355.html), [Junfeng Yang](https://dblp.org/pid/71/3724.html), [Ronghui Gu](https://dblp.org/pid/155/8148.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_12) [[SCInfer]] - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
+	[Jun Zhang](https://dblp.org/pid/29/4190.html), [Pengfei Gao](https://dblp.org/pid/147/0949.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Chao Wang](https://dblp.org/pid/w/ChaoWang.html)
