--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -1,95 +1,95 @@
 ## Computer Aided Verification - 30th International Conference, CAV 2018, Proceedings Part I
 #classified
 ---
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_15) Counterexample Guided Inductive Synthesis Modulo Theories.
-	[Alessandro Abate](https://dblp.uni-trier.de/pid/19/3904.html), [Cristina David](https://dblp.uni-trier.de/pid/01/3840.html), [Pascal Kesseli](https://dblp.uni-trier.de/pid/168/8498.html), [Daniel Kroening](https://dblp.uni-trier.de/pid/k/DanielKroening.html), [Elizabeth Polgreen](https://dblp.uni-trier.de/pid/183/7353.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_14) What's Hard About Boolean Functional Synthesis?
-	[S. Akshay](https://dblp.uni-trier.de/pid/28/6534.html), [Supratik Chakraborty](https://dblp.uni-trier.de/pid/34/4525.html), [Shubham Goel](https://dblp.uni-trier.de/pid/194/2742.html), [Sumith Kulal](https://dblp.uni-trier.de/pid/180/9770.html), [Shetal Shah](https://dblp.uni-trier.de/pid/41/3254.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_18) Constraint-Based Synthesis of Coupling Proofs.
-	[Aws Albarghouthi](https://dblp.uni-trier.de/pid/90/8295.html), [Justin Hsu](https://dblp.uni-trier.de/pid/35/10964.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_23) The Learnability of Symbolic Automata.
-	[George Argyros](https://dblp.uni-trier.de/pid/145/1793.html), [Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_15) Counterexample Guided Inductive Synthesis Modulo Theories.
+	[Alessandro Abate](https://dblp.org/pid/19/3904.html), [Cristina David](https://dblp.org/pid/01/3840.html), [Pascal Kesseli](https://dblp.org/pid/168/8498.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Elizabeth Polgreen](https://dblp.org/pid/183/7353.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_14) What's Hard About Boolean Functional Synthesis?
+	[S. Akshay](https://dblp.org/pid/28/6534.html), [Supratik Chakraborty](https://dblp.org/pid/34/4525.html), [Shubham Goel](https://dblp.org/pid/194/2742.html), [Sumith Kulal](https://dblp.org/pid/180/9770.html), [Shetal Shah](https://dblp.org/pid/41/3254.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_18) Constraint-Based Synthesis of Coupling Proofs.
+	[Aws Albarghouthi](https://dblp.org/pid/90/8295.html), [Justin Hsu](https://dblp.org/pid/35/10964.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_23) The Learnability of Symbolic Automata.
+	[George Argyros](https://dblp.org/pid/145/1793.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
 	Algorithm implemented in [[symbolicautomata]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_20) Synthesis of Asynchronous Reactive Programs from Temporal Specifications.
-	[Suguman Bansal](https://dblp.uni-trier.de/pid/217/4777.html), [Kedar S. Namjoshi](https://dblp.uni-trier.de/pid/96/6348.html), [Yaniv Sa'ar](https://dblp.uni-trier.de/pid/58/1051.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_20) Synthesis of Asynchronous Reactive Programs from Temporal Specifications.
+	[Suguman Bansal](https://dblp.org/pid/217/4777.html), [Kedar S. Namjoshi](https://dblp.org/pid/96/6348.html), [Yaniv Sa'ar](https://dblp.org/pid/58/1051.html)
 	Implemented prototype [[BAS]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_29) A Counting Semantics for Monitoring LTL Specifications over Finite Traces.
-	[Ezio Bartocci](https://dblp.uni-trier.de/pid/b/EzioBartocci.html), [Roderick Bloem](https://dblp.uni-trier.de/pid/80/1300.html), [Dejan Nickovic](https://dblp.uni-trier.de/pid/60/1425.html), [Franz Röck](https://dblp.uni-trier.de/pid/39/8503.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_13) A Direct Encoding for NNC Polyhedra.
-	[Anna Becchi](https://dblp.uni-trier.de/pid/210/2636.html), [Enea Zaffanella](https://dblp.uni-trier.de/pid/01/1396.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_34) [[Peregrine]] - A Tool for the Analysis of Population Protocols.
-	[Michael Blondin](https://dblp.uni-trier.de/pid/117/6024.html), [Javier Esparza](https://dblp.uni-trier.de/pid/e/JEsparza.html), [Stefan Jaax](https://dblp.uni-trier.de/pid/182/9266.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_28) Start Pruning When Time Gets Urgent - Partial Order Reduction for Timed Systems.
-	[Frederik M. Bønneland](https://dblp.uni-trier.de/pid/220/0647.html), [Peter Gjøl Jensen](https://dblp.uni-trier.de/pid/144/4964.html), [Kim Guldstrand Larsen](https://dblp.uni-trier.de/pid/l/KimGuldstrandLarsen.html), [Marco Muñiz](https://dblp.uni-trier.de/pid/12/9960.html), [Jirí Srba](https://dblp.uni-trier.de/pid/s/JiriSrba.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_29) A Counting Semantics for Monitoring LTL Specifications over Finite Traces.
+	[Ezio Bartocci](https://dblp.org/pid/b/EzioBartocci.html), [Roderick Bloem](https://dblp.org/pid/80/1300.html), [Dejan Nickovic](https://dblp.org/pid/60/1425.html), [Franz Röck](https://dblp.org/pid/39/8503.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_13) A Direct Encoding for NNC Polyhedra.
+	[Anna Becchi](https://dblp.org/pid/210/2636.html), [Enea Zaffanella](https://dblp.org/pid/01/1396.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_34) [[Peregrine]] - A Tool for the Analysis of Population Protocols.
+	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Stefan Jaax](https://dblp.org/pid/182/9266.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_28) Start Pruning When Time Gets Urgent - Partial Order Reduction for Timed Systems.
+	[Frederik M. Bønneland](https://dblp.org/pid/220/0647.html), [Peter Gjøl Jensen](https://dblp.org/pid/144/4964.html), [Kim Guldstrand Larsen](https://dblp.org/pid/l/KimGuldstrandLarsen.html), [Marco Muñiz](https://dblp.org/pid/12/9960.html), [Jirí Srba](https://dblp.org/pid/s/JiriSrba.html)
 	Algorithm/technique implemented in model checker [[TAPAAL]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_35) [[ADAC]] - Automated Design of Approximate Circuits.
-	[Milan Ceska](https://dblp.uni-trier.de/pid/213/3728.html), [Jirí Matyás](https://dblp.uni-trier.de/pid/211/0035.html), [Vojtech Mrazek](https://dblp.uni-trier.de/pid/157/1370.html), [Lukás Sekanina](https://dblp.uni-trier.de/pid/49/5896.html), [Zdenek Vasícek](https://dblp.uni-trier.de/pid/07/1601.html), [Tomás Vojnar](https://dblp.uni-trier.de/pid/51/533.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_3) Formal Reasoning About the Security of Amazon Web Services.
-	[Byron Cook](https://dblp.uni-trier.de/pid/36/113.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_10) [[JBMC]] - A Bounded Model Checking Tool for Verifying Java Bytecode.
-	[Lucas C. Cordeiro](https://dblp.uni-trier.de/pid/42/4311.html), [Pascal Kesseli](https://dblp.uni-trier.de/pid/168/8498.html), [Daniel Kroening](https://dblp.uni-trier.de/pid/k/DanielKroening.html), [Peter Schrammel](https://dblp.uni-trier.de/pid/23/8898.html), [Marek Trtík](https://dblp.uni-trier.de/pid/24/9889.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_1) Semantic Adversarial Deep Learning.
-	[Tommaso Dreossi](https://dblp.uni-trier.de/pid/117/9140.html), [Somesh Jha](https://dblp.uni-trier.de/pid/j/SomeshJha.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_33) [[Nagini]] - A Static Verifier for Python.
-	[Marco Eilers](https://dblp.uni-trier.de/pid/217/4745.html), [Peter Müller](https://dblp.uni-trier.de/pid/m/PMuller1.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_26) Monitoring Weak Consistency.
-	[Michael Emmi](https://dblp.uni-trier.de/pid/76/5819.html), [Constantin Enea](https://dblp.uni-trier.de/pid/72/2839.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_19) Controller Synthesis Made Real - Reach-Avoid Specifications and Linear Dynamics.
-	[Chuchu Fan](https://dblp.uni-trier.de/pid/127/1756.html), [Umang Mathur](https://dblp.uni-trier.de/pid/137/7835.html), [Sayan Mitra](https://dblp.uni-trier.de/pid/07/3797.html), [Mahesh Viswanathan](https://dblp.uni-trier.de/pid/23/2759-1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_35) [[ADAC]] - Automated Design of Approximate Circuits.
+	[Milan Ceska](https://dblp.org/pid/213/3728.html), [Jirí Matyás](https://dblp.org/pid/211/0035.html), [Vojtech Mrazek](https://dblp.org/pid/157/1370.html), [Lukás Sekanina](https://dblp.org/pid/49/5896.html), [Zdenek Vasícek](https://dblp.org/pid/07/1601.html), [Tomás Vojnar](https://dblp.org/pid/51/533.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_3) Formal Reasoning About the Security of Amazon Web Services.
+	[Byron Cook](https://dblp.org/pid/36/113.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_10) [[JBMC]] - A Bounded Model Checking Tool for Verifying Java Bytecode.
+	[Lucas C. Cordeiro](https://dblp.org/pid/42/4311.html), [Pascal Kesseli](https://dblp.org/pid/168/8498.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Peter Schrammel](https://dblp.org/pid/23/8898.html), [Marek Trtík](https://dblp.org/pid/24/9889.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_1) Semantic Adversarial Deep Learning.
+	[Tommaso Dreossi](https://dblp.org/pid/117/9140.html), [Somesh Jha](https://dblp.org/pid/j/SomeshJha.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_33) [[Nagini]] - A Static Verifier for Python.
+	[Marco Eilers](https://dblp.org/pid/217/4745.html), [Peter Müller](https://dblp.org/pid/m/PMuller1.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_26) Monitoring Weak Consistency.
+	[Michael Emmi](https://dblp.org/pid/76/5819.html), [Constantin Enea](https://dblp.org/pid/72/2839.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_19) Controller Synthesis Made Real - Reach-Avoid Specifications and Linear Dynamics.
+	[Chuchu Fan](https://dblp.org/pid/127/1756.html), [Umang Mathur](https://dblp.org/pid/137/7835.html), [Sayan Mitra](https://dblp.org/pid/07/3797.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
 	Implemented in [[RealSyn]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_7) Syntax-Guided Termination Analysis.
-	[Grigory Fedyukovich](https://dblp.uni-trier.de/pid/43/8810.html), [Yueling Zhang](https://dblp.uni-trier.de/pid/76/10611.html), [Aarti Gupta](https://dblp.uni-trier.de/pid/18/2229.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_7) Syntax-Guided Termination Analysis.
+	[Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Yueling Zhang](https://dblp.org/pid/76/10611.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
 	Implemented in [[FreqTerm]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_27) Monitoring CTMCs by Multi-clock Timed Automata.
-	[Yijun Feng](https://dblp.uni-trier.de/pid/138/5942.html), [Joost-Pieter Katoen](https://dblp.uni-trier.de/pid/k/JoostPieterKatoen.html), [Haokun Li](https://dblp.uni-trier.de/pid/213/7996.html), [Bican Xia](https://dblp.uni-trier.de/pid/07/587.html), [Naijun Zhan](https://dblp.uni-trier.de/pid/63/1911.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_16) Synthesizing Reactive Systems from Hyperproperties.
-	[Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Christopher Hahn](https://dblp.uni-trier.de/pid/91/9661.html), [Philip Lukert](https://dblp.uni-trier.de/pid/223/5136.html), [Marvin Stenger](https://dblp.uni-trier.de/pid/189/1078.html), [Leander Tentrup](https://dblp.uni-trier.de/pid/143/2715.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_27) Monitoring CTMCs by Multi-clock Timed Automata.
+	[Yijun Feng](https://dblp.org/pid/138/5942.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Haokun Li](https://dblp.org/pid/213/7996.html), [Bican Xia](https://dblp.org/pid/07/587.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_16) Synthesizing Reactive Systems from Hyperproperties.
+	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Philip Lukert](https://dblp.org/pid/223/5136.html), [Marvin Stenger](https://dblp.org/pid/189/1078.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	Implemented in [[BoSyHyper]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_8) Model Checking Quantitative Hyperproperties.
-	[Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Christopher Hahn](https://dblp.uni-trier.de/pid/91/9661.html), [Hazem Torfah](https://dblp.uni-trier.de/pid/140/9733.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_25) Space-Time Interpolants.
-	[Goran Frehse](https://dblp.uni-trier.de/pid/95/3625.html), [Mirco Giacobbe](https://dblp.uni-trier.de/pid/134/7846.html), [Thomas A. Henzinger](https://dblp.uni-trier.de/pid/h/ThomasAHenzinger.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_17) Reactive Control Improvisation.
-	[Daniel J. Fremont](https://dblp.uni-trier.de/pid/144/7602.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_4) Foundations and Tools for the Static Analysis of Ethereum Smart Contracts.
-	[Ilya Grishchenko](https://dblp.uni-trier.de/pid/180/7263.html), [Matteo Maffei](https://dblp.uni-trier.de/pid/25/3571.html), [Clara Schneidewind](https://dblp.uni-trier.de/pid/215/5466.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_21) Syntax-Guided Synthesis with Quantitative Syntactic Objectives.
-	[Qinheping Hu](https://dblp.uni-trier.de/pid/201/4822.html), [Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_8) Model Checking Quantitative Hyperproperties.
+	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_25) Space-Time Interpolants.
+	[Goran Frehse](https://dblp.org/pid/95/3625.html), [Mirco Giacobbe](https://dblp.org/pid/134/7846.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_17) Reactive Control Improvisation.
+	[Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_4) Foundations and Tools for the Static Analysis of Ethereum Smart Contracts.
+	[Ilya Grishchenko](https://dblp.org/pid/180/7263.html), [Matteo Maffei](https://dblp.org/pid/25/3571.html), [Clara Schneidewind](https://dblp.org/pid/215/5466.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_21) Syntax-Guided Synthesis with Quantitative Syntactic Objectives.
+	[Qinheping Hu](https://dblp.org/pid/201/4822.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
 	Tool: [[QuaSi]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_36) Value Iteration for Simple Stochastic Games - Stopping Criterion and Learning Algorithm.
-	[Edon Kelmendi](https://dblp.uni-trier.de/pid/140/7385.html), [Julia Krämer](https://dblp.uni-trier.de/pid/132/6988.html), [Jan Kretínský](https://dblp.uni-trier.de/pid/95/6511.html), [Maximilian Weininger](https://dblp.uni-trier.de/pid/194/2910.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_24) Reachable Set Over-Approximation for Nonlinear Systems Using Piecewise Barrier Tubes.
-	[Hui Kong](https://dblp.uni-trier.de/pid/94/1836.html), [Ezio Bartocci](https://dblp.uni-trier.de/pid/b/EzioBartocci.html), [Thomas A. Henzinger](https://dblp.uni-trier.de/pid/h/ThomasAHenzinger.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_36) Value Iteration for Simple Stochastic Games - Stopping Criterion and Learning Algorithm.
+	[Edon Kelmendi](https://dblp.org/pid/140/7385.html), [Julia Krämer](https://dblp.org/pid/132/6988.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_24) Reachable Set Over-Approximation for Nonlinear Systems Using Piecewise Barrier Tubes.
+	[Hui Kong](https://dblp.org/pid/94/1836.html), [Ezio Bartocci](https://dblp.org/pid/b/EzioBartocci.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html)
 	Tool: [[Piecewise Barrier Tube Solver (PBTS)]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_5) Layered Concurrent Programs.
-	[Bernhard Kragl](https://dblp.uni-trier.de/pid/138/6924.html), [Shaz Qadeer](https://dblp.uni-trier.de/pid/q/ShazQadeer.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_5) Layered Concurrent Programs.
+	[Bernhard Kragl](https://dblp.org/pid/138/6924.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html)
 	Tool: [[CIVL (Boogie extension)]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_30) [[Rabinizer 4]] - From LTL to Your Favourite Deterministic Automaton.
-	[Jan Kretínský](https://dblp.uni-trier.de/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.uni-trier.de/pid/194/2764.html), [Salomon Sickert](https://dblp.uni-trier.de/pid/129/1369.html), [Christopher Ziegler](https://dblp.uni-trier.de/pid/223/5064.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_11) Eager Abstraction for Symbolic Model Checking.
-	[Kenneth L. McMillan](https://dblp.uni-trier.de/pid/m/KennethLMcMillan.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_30) [[Rabinizer 4]] - From LTL to Your Favourite Deterministic Automaton.
+	[Jan Kretínský](https://dblp.org/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.org/pid/194/2764.html), [Salomon Sickert](https://dblp.org/pid/129/1369.html), [Christopher Ziegler](https://dblp.org/pid/223/5064.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_11) Eager Abstraction for Symbolic Model Checking.
+	[Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html)
 	Implemented in [[IVy]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_31) [[Strix]] - Explicit Reactive Synthesis Strikes Back!
-	[Philipp J. Meyer](https://dblp.uni-trier.de/pid/118/3833.html), [Salomon Sickert](https://dblp.uni-trier.de/pid/129/1369.html), [Michael Luttenberger](https://dblp.uni-trier.de/pid/62/964.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_32) Btor2 , [[BtorMC]] and [[Boolector]] 3.0.
-	[Aina Niemetz](https://dblp.uni-trier.de/pid/115/4373.html), [Mathias Preiner](https://dblp.uni-trier.de/pid/115/4371.html), [Clifford Wolf](https://dblp.uni-trier.de/pid/121/1469.html), [Armin Biere](https://dblp.uni-trier.de/pid/b/ArminBiere.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_9) Exploiting Synchrony and Symmetry in Relational Verification.
-	[Lauren Pick](https://dblp.uni-trier.de/pid/223/5412.html), [Grigory Fedyukovich](https://dblp.uni-trier.de/pid/43/8810.html), [Aarti Gupta](https://dblp.uni-trier.de/pid/18/2229.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_31) [[Strix]] - Explicit Reactive Synthesis Strikes Back!
+	[Philipp J. Meyer](https://dblp.org/pid/118/3833.html), [Salomon Sickert](https://dblp.org/pid/129/1369.html), [Michael Luttenberger](https://dblp.org/pid/62/964.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_32) Btor2 , [[BtorMC]] and [[Boolector]] 3.0.
+	[Aina Niemetz](https://dblp.org/pid/115/4373.html), [Mathias Preiner](https://dblp.org/pid/115/4371.html), [Clifford Wolf](https://dblp.org/pid/121/1469.html), [Armin Biere](https://dblp.org/pid/b/ArminBiere.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_9) Exploiting Synchrony and Symmetry in Relational Verification.
+	[Lauren Pick](https://dblp.org/pid/223/5412.html), [Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
 	Implemented in [[Synonym]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_37) Sound Value Iteration.
-	[Tim Quatmann](https://dblp.uni-trier.de/pid/162/9630.html), [Joost-Pieter Katoen](https://dblp.uni-trier.de/pid/k/JoostPieterKatoen.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_37) Sound Value Iteration.
+	[Tim Quatmann](https://dblp.org/pid/162/9630.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html)
 	Implemented in [[Storm]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_6) Propositional Dynamic Logic for Higher-Order Functional Programs.
-	[Yuki Satake](https://dblp.uni-trier.de/pid/211/9273.html), [Hiroshi Unno](https://dblp.uni-trier.de/pid/24/6058.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_12) Fast Numerical Program Analysis with Reinforcement Learning.
-	[Gagandeep Singh](https://dblp.uni-trier.de/pid/64/3747-1.html), [Markus Püschel](https://dblp.uni-trier.de/pid/37/6355.html), [Martin T. Vechev](https://dblp.uni-trier.de/pid/93/2189.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_6) Propositional Dynamic Logic for Higher-Order Functional Programs.
+	[Yuki Satake](https://dblp.org/pid/211/9273.html), [Hiroshi Unno](https://dblp.org/pid/24/6058.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_12) Fast Numerical Program Analysis with Reinforcement Learning.
+	[Gagandeep Singh](https://dblp.org/pid/64/3747-1.html), [Markus Püschel](https://dblp.org/pid/37/6355.html), [Martin T. Vechev](https://dblp.org/pid/93/2189.html)
 	Implemented in [[Poly-RL]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_39) Deciding Probabilistic Bisimilarity Distance One for Labelled Markov Chains.
-	[Qiyi Tang](https://dblp.uni-trier.de/pid/184/8455-1.html), [Franck van Breugel](https://dblp.uni-trier.de/pid/89/3661.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_22) Learning Abstractions for Program Synthesis.
-	[Xinyu Wang](https://dblp.uni-trier.de/pid/68/1277-6.html), [Greg Anderson](https://dblp.uni-trier.de/pid/53/6132.html), [Isil Dillig](https://dblp.uni-trier.de/pid/85/3688.html), [Kenneth L. McMillan](https://dblp.uni-trier.de/pid/m/KennethLMcMillan.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_39) Deciding Probabilistic Bisimilarity Distance One for Labelled Markov Chains.
+	[Qiyi Tang](https://dblp.org/pid/184/8455-1.html), [Franck van Breugel](https://dblp.org/pid/89/3661.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_22) Learning Abstractions for Program Synthesis.
+	[Xinyu Wang](https://dblp.org/pid/68/1277-6.html), [Greg Anderson](https://dblp.org/pid/53/6132.html), [Isil Dillig](https://dblp.org/pid/85/3688.html), [Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html)
 	Implemented as [[ATLAS]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_2) From Programs to Interpretable Deep Models and Back.
-	[Eran Yahav](https://dblp.uni-trier.de/pid/54/5133.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-319-96145-3_38) Safety-Aware Apprenticeship Learning.
-	[Weichao Zhou](https://dblp.uni-trier.de/pid/207/8077.html), [Wenchao Li](https://dblp.uni-trier.de/pid/23/5721.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_2) From Programs to Interpretable Deep Models and Back.
+	[Eran Yahav](https://dblp.org/pid/54/5133.html)
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_38) Safety-Aware Apprenticeship Learning.
+	[Weichao Zhou](https://dblp.org/pid/207/8077.html), [Wenchao Li](https://dblp.org/pid/23/5721.html)
