--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -1,82 +1,82 @@
 ## Computer Aided Verification - 32nd International Conference, CAV 2020,  Proceedings Part II
 ---
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_10) [[MetaVal]] - Witness Validation via Verification.
-	[Dirk Beyer](https://dblp.uni-trier.de/pid/b/DirkBeyer1.html), [Martin Spiessl](https://dblp.uni-trier.de/pid/269/9790.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_28) Good-Enough Synthesis.
-	[Shaull Almagor](https://dblp.uni-trier.de/pid/88/8556.html), [Orna Kupferman](https://dblp.uni-trier.de/pid/k/OrnaKupferman.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
-	[Kevin Batz](https://dblp.uni-trier.de/pid/215/5068.html), [Sebastian Junges](https://dblp.uni-trier.de/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.uni-trier.de/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.uni-trier.de/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.uni-trier.de/pid/172/5070.html), [Philipp Schröer](https://dblp.uni-trier.de/pid/264/0074.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
-	[Jan Baumeister](https://dblp.uni-trier.de/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Sebastian Schirmer](https://dblp.uni-trier.de/pid/185/8889.html), [Maximilian Schwenger](https://dblp.uni-trier.de/pid/191/6041.html), [Christoph Torens](https://dblp.uni-trier.de/pid/33/9870.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
-	[Hugo Bazille](https://dblp.uni-trier.de/pid/150/7498.html), [Blaise Genest](https://dblp.uni-trier.de/pid/59/6859.html), [Cyrille Jégourel](https://dblp.uni-trier.de/pid/33/10826.html), [Jun Sun](https://dblp.uni-trier.de/pid/s/JunSun1.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_22) Qualitative Controller Synthesis for Consumption Markov Decision Processes.
-	[Frantisek Blahoudek](https://dblp.uni-trier.de/pid/131/6892.html), [Tomás Brázdil](https://dblp.uni-trier.de/pid/18/3197.html), [Petr Novotný](https://dblp.uni-trier.de/pid/91/10961.html), [Melkior Ornik](https://dblp.uni-trier.de/pid/175/9333.html), [Pranay Thangeda](https://dblp.uni-trier.de/pid/265/6126.html), [Ufuk Topcu](https://dblp.uni-trier.de/pid/12/6659.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_10) [[MetaVal]] - Witness Validation via Verification.
+	[Dirk Beyer](https://dblp.org/pid/b/DirkBeyer1.html), [Martin Spiessl](https://dblp.org/pid/269/9790.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_28) Good-Enough Synthesis.
+	[Shaull Almagor](https://dblp.org/pid/88/8556.html), [Orna Kupferman](https://dblp.org/pid/k/OrnaKupferman.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
+	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
+	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
+	[Hugo Bazille](https://dblp.org/pid/150/7498.html), [Blaise Genest](https://dblp.org/pid/59/6859.html), [Cyrille Jégourel](https://dblp.org/pid/33/10826.html), [Jun Sun](https://dblp.org/pid/s/JunSun1.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_22) Qualitative Controller Synthesis for Consumption Markov Decision Processes.
+	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Tomás Brázdil](https://dblp.org/pid/18/3197.html), [Petr Novotný](https://dblp.org/pid/91/10961.html), [Melkior Ornik](https://dblp.org/pid/175/9333.html), [Pranay Thangeda](https://dblp.org/pid/265/6126.html), [Ufuk Topcu](https://dblp.org/pid/12/6659.html)
 	Implemented in [[FiMDP]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_2) [[Seminator 2]] Can Complement Generalized Büchi Automata via Improved Semi-determinization.
-	[Frantisek Blahoudek](https://dblp.uni-trier.de/pid/131/6892.html), [Alexandre Duret-Lutz](https://dblp.uni-trier.de/pid/43/6032.html), [Jan Strejcek](https://dblp.uni-trier.de/pid/37/1716.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_20) Checking Qualitative Liveness Properties of Replicated Systems with Stochastic Scheduling.
-	[Michael Blondin](https://dblp.uni-trier.de/pid/117/6024.html), [Javier Esparza](https://dblp.uni-trier.de/pid/e/JEsparza.html), [Martin Helfrich](https://dblp.uni-trier.de/pid/250/9258.html), [Antonín Kucera](https://dblp.uni-trier.de/pid/k/AntoninKucera.html), [Philipp J. Meyer](https://dblp.uni-trier.de/pid/118/3833.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) [[Seminator 2]] Can Complement Generalized Büchi Automata via Improved Semi-determinization.
+	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Alexandre Duret-Lutz](https://dblp.org/pid/43/6032.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_20) Checking Qualitative Liveness Properties of Replicated Systems with Stochastic Scheduling.
+	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Antonín Kucera](https://dblp.org/pid/k/AntoninKucera.html), [Philipp J. Meyer](https://dblp.org/pid/118/3833.html)
 	Implementation of the proposed procedure has no name
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_13) Reasoning over Permissions Regions in Concurrent Separation Logic.
-	[James Brotherston](https://dblp.uni-trier.de/pid/77/3809.html), [Diana Costa](https://dblp.uni-trier.de/pid/156/7127-1.html), [Aquinas Hobor](https://dblp.uni-trier.de/pid/26/3410.html), [John Wickerson](https://dblp.uni-trier.de/pid/21/7915.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_21) Stochastic Games with Lexicographic Reachability-Safety Objectives.
-	[Krishnendu Chatterjee](https://dblp.uni-trier.de/pid/92/5602.html), [Joost-Pieter Katoen](https://dblp.uni-trier.de/pid/k/JoostPieterKatoen.html), [Maximilian Weininger](https://dblp.uni-trier.de/pid/194/2910.html), [Tobias Winkler](https://dblp.uni-trier.de/pid/66/750.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_13) Reasoning over Permissions Regions in Concurrent Separation Logic.
+	[James Brotherston](https://dblp.org/pid/77/3809.html), [Diana Costa](https://dblp.org/pid/156/7127-1.html), [Aquinas Hobor](https://dblp.org/pid/26/3410.html), [John Wickerson](https://dblp.org/pid/21/7915.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_21) Stochastic Games with Lexicographic Reachability-Safety Objectives.
+	[Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html), [Tobias Winkler](https://dblp.org/pid/66/750.html)
 	Implemented within [[PRISM-games]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_30) Program Synthesis Using Deduction-Guided Reinforcement Learning.
-	[Yanju Chen](https://dblp.uni-trier.de/pid/05/4034.html), [Chenglong Wang](https://dblp.uni-trier.de/pid/94/9817.html), [Osbert Bastani](https://dblp.uni-trier.de/pid/21/11275.html), [Isil Dillig](https://dblp.uni-trier.de/pid/85/3688.html), [Yu Feng](https://dblp.uni-trier.de/pid/30/4550.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_30) Program Synthesis Using Deduction-Guided Reinforcement Learning.
+	[Yanju Chen](https://dblp.org/pid/05/4034.html), [Chenglong Wang](https://dblp.org/pid/94/9817.html), [Osbert Bastani](https://dblp.org/pid/21/11275.html), [Isil Dillig](https://dblp.org/pid/85/3688.html), [Yu Feng](https://dblp.org/pid/30/4550.html)
 	Implemented in [[Concord]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_1) [[Automata Tutor]] v3.
-	[Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html), [Martin Helfrich](https://dblp.uni-trier.de/pid/250/9258.html), [Jan Kretínský](https://dblp.uni-trier.de/pid/95/6511.html), [Emanuel Ramneantu](https://dblp.uni-trier.de/pid/264/5096.html), [Maximilian Weininger](https://dblp.uni-trier.de/pid/194/2910.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_11) Recursive Data Structures in [[SPARK]].
-	[Claire Dross](https://dblp.uni-trier.de/pid/07/9840.html), [Johannes Kanig](https://dblp.uni-trier.de/pid/70/225.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_18) Unbounded-Time Safety Verification of Stochastic Differential Dynamics.
-	[Shenghua Feng](https://dblp.uni-trier.de/pid/232/3100.html), [Mingshuai Chen](https://dblp.uni-trier.de/pid/169/1207.html), [Bai Xue](https://dblp.uni-trier.de/pid/74/2716-1.html), [Sriram Sankaranarayanan](https://dblp.uni-trier.de/pid/82/1542.html), [Naijun Zhan](https://dblp.uni-trier.de/pid/63/1911.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_1) [[Automata Tutor]] v3.
+	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Emanuel Ramneantu](https://dblp.org/pid/264/5096.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_11) Recursive Data Structures in [[SPARK]].
+	[Claire Dross](https://dblp.org/pid/07/9840.html), [Johannes Kanig](https://dblp.org/pid/70/225.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_18) Unbounded-Time Safety Verification of Stochastic Differential Dynamics.
+	[Shenghua Feng](https://dblp.org/pid/232/3100.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html), [Sriram Sankaranarayanan](https://dblp.org/pid/82/1542.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html)
 	Implementation has no name
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_5) [[AdamMC]] - A Model Checker for Petri Nets with Transits against Flow-LTL.
-	[Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Manuel Gieseking](https://dblp.uni-trier.de/pid/165/2732.html), [Jesko Hecking-Harbusch](https://dblp.uni-trier.de/pid/210/2559.html), [Ernst-Rüdiger Olderog](https://dblp.uni-trier.de/pid/o/ErnstRudigerOlderog.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_4) Realizing ømega-regular Hyperproperties.
-	[Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Christopher Hahn](https://dblp.uni-trier.de/pid/91/9661.html), [Jana Hofmann](https://dblp.uni-trier.de/pid/246/5631.html), [Leander Tentrup](https://dblp.uni-trier.de/pid/143/2715.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_5) [[AdamMC]] - A Model Checker for Petri Nets with Transits against Flow-LTL.
+	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Manuel Gieseking](https://dblp.org/pid/165/2732.html), [Jesko Hecking-Harbusch](https://dblp.org/pid/210/2559.html), [Ernst-Rüdiger Olderog](https://dblp.org/pid/o/ErnstRudigerOlderog.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_4) Realizing ømega-regular Hyperproperties.
+	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Jana Hofmann](https://dblp.org/pid/246/5631.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	Implemented in [[BoSy]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_29) Synthesizing JIT Compilers for In-Kernel DSLs.
-	[Jacob Van Geffen](https://dblp.uni-trier.de/pid/190/7037.html), [Luke Nelson](https://dblp.uni-trier.de/pid/194/6735.html), [Isil Dillig](https://dblp.uni-trier.de/pid/85/3688.html), [Xi Wang](https://dblp.uni-trier.de/pid/08/5760-5.html), [Emina Torlak](https://dblp.uni-trier.de/pid/55/1457.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_29) Synthesizing JIT Compilers for In-Kernel DSLs.
+	[Jacob Van Geffen](https://dblp.org/pid/190/7037.html), [Luke Nelson](https://dblp.org/pid/194/6735.html), [Isil Dillig](https://dblp.org/pid/85/3688.html), [Xi Wang](https://dblp.org/pid/08/5760-5.html), [Emina Torlak](https://dblp.org/pid/55/1457.html)
 	Implemented in [[JitSynth]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_31) [[Manthan]] - A Data-Driven Approach for Boolean Function Synthesis.
-	[Priyanka Golia](https://dblp.uni-trier.de/pid/265/6125.html), [Subhajit Roy](https://dblp.uni-trier.de/pid/95/621.html), [Kuldeep S. Meel](https://dblp.uni-trier.de/pid/129/1623.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_16) Certifying Certainty and Uncertainty in Approximate Membership Query Structures.
-	[Kiran Gopinathan](https://dblp.uni-trier.de/pid/218/7694.html), [Ilya Sergey](https://dblp.uni-trier.de/pid/77/9770.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_31) [[Manthan]] - A Data-Driven Approach for Boolean Function Synthesis.
+	[Priyanka Golia](https://dblp.org/pid/265/6125.html), [Subhajit Roy](https://dblp.org/pid/95/621.html), [Kuldeep S. Meel](https://dblp.org/pid/129/1623.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_16) Certifying Certainty and Uncertainty in Approximate Membership Query Structures.
+	[Kiran Gopinathan](https://dblp.org/pid/218/7694.html), [Ilya Sergey](https://dblp.org/pid/77/9770.html)
 	Implemented [[Ceramist]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_26) Optimistic Value Iteration.
-	[Arnd Hartmanns](https://dblp.uni-trier.de/pid/89/7952.html), [Benjamin Lucien Kaminski](https://dblp.uni-trier.de/pid/39/9937.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_26) Optimistic Value Iteration.
+	[Arnd Hartmanns](https://dblp.org/pid/89/7952.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html)
 	Implemented in [[mcsta]], [[Modest Toolset]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_8) Towards Model Checking Real-World Software-Defined Networks.
-	[Vasileios Klimis](https://dblp.uni-trier.de/pid/263/6824.html), [George Parisis](https://dblp.uni-trier.de/pid/12/4999.html), [Bernhard Reus](https://dblp.uni-trier.de/pid/28/3100.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_8) Towards Model Checking Real-World Software-Defined Networks.
+	[Vasileios Klimis](https://dblp.org/pid/263/6824.html), [George Parisis](https://dblp.org/pid/12/4999.html), [Bernhard Reus](https://dblp.org/pid/28/3100.html)
 	Implemented [[MOCS]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_7) Global Guidance for Local Generalization in Model Checking.
-	[Hari Govind Vediramana Krishnan](https://dblp.uni-trier.de/pid/204/2535.html), [YuTing Chen](https://dblp.uni-trier.de/pid/266/1508.html), [Sharon Shoham](https://dblp.uni-trier.de/pid/92/128.html), [Arie Gurfinkel](https://dblp.uni-trier.de/pid/44/3532.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_7) Global Guidance for Local Generalization in Model Checking.
+	[Hari Govind Vediramana Krishnan](https://dblp.org/pid/204/2535.html), [YuTing Chen](https://dblp.org/pid/266/1508.html), [Sharon Shoham](https://dblp.org/pid/92/128.html), [Arie Gurfinkel](https://dblp.org/pid/44/3532.html)
 	Implemented [[GSpacer]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_32) Decidable Synthesis of Programs with Uninterpreted Functions.
-	[Paul Krogmeier](https://dblp.uni-trier.de/pid/244/2375.html), [Umang Mathur](https://dblp.uni-trier.de/pid/137/7835.html), [Adithya Murali](https://dblp.uni-trier.de/pid/234/8538.html), [P. Madhusudan](https://dblp.uni-trier.de/pid/m/PMadhusudan.html), [Mahesh Viswanathan](https://dblp.uni-trier.de/pid/23/2759-1.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_25) [[PRISM-games]] 3.0 - Stochastic Game Verification with Concurrency, Equilibria and Time.
-	[Marta Kwiatkowska](https://dblp.uni-trier.de/pid/k/MartaZKwiatkowska.html), [Gethin Norman](https://dblp.uni-trier.de/pid/59/1659.html), [David Parker](https://dblp.uni-trier.de/pid/33/3095.html), [Gabriel Santos](https://dblp.uni-trier.de/pid/19/7786.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_24) [[AMYTISS]] - Parallelized Automated Controller Synthesis for Large-Scale Stochastic Systems.
-	[Abolfazl Lavaei](https://dblp.uni-trier.de/pid/202/7474.html), [Mahmoud Khaled](https://dblp.uni-trier.de/pid/153/9945.html), [Sadegh Soudjani](https://dblp.uni-trier.de/pid/23/10279.html), [Majid Zamani](https://dblp.uni-trier.de/pid/34/9188.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_12) [[Ivy]] - A Multi-modal Verification Tool for Distributed Algorithms.
-	[Kenneth L. McMillan](https://dblp.uni-trier.de/pid/m/KennethLMcMillan.html), [Oded Padon](https://dblp.uni-trier.de/pid/155/8122.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_19) Widest Paths and Global Propagation in Bounded Value Iteration for Stochastic Games.
-	[Kittiphon Phalakarn](https://dblp.uni-trier.de/pid/187/5700.html), [Toru Takisaka](https://dblp.uni-trier.de/pid/156/0024.html), [Thomas Haas](https://dblp.uni-trier.de/pid/115/7079.html), [Ichiro Hasuo](https://dblp.uni-trier.de/pid/26/4542.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_14) Local Reasoning About the Presence of Bugs - Incorrectness Separation Logic.
-	[Azalea Raad](https://dblp.uni-trier.de/pid/84/9528.html), [Josh Berdine](https://dblp.uni-trier.de/pid/61/1623.html), [Hoang-Hai Dang](https://dblp.uni-trier.de/pid/201/8129.html), [Derek Dreyer](https://dblp.uni-trier.de/pid/d/DerekDreyer.html), [Peter W. O'Hearn](https://dblp.uni-trier.de/pid/o/PeterWOHearn.html), [Jules Villard](https://dblp.uni-trier.de/pid/79/6376.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_23) [[STMC]] - Statistical Model Checker with Stratified and Antithetic Sampling.
-	[Nima Roohi](https://dblp.uni-trier.de/pid/93/7539.html), [Yu Wang](https://dblp.uni-trier.de/pid/02/5889-44.html), [Matthew West](https://dblp.uni-trier.de/pid/16/1726-1.html), [Geir E. Dullerud](https://dblp.uni-trier.de/pid/d/GeirEDullerud.html), [Mahesh Viswanathan](https://dblp.uni-trier.de/pid/23/2759-1.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_33) Must Fault Localization for Program Repair.
-	[Bat-Chen Rothenberg](https://dblp.uni-trier.de/pid/189/1034.html), [Orna Grumberg](https://dblp.uni-trier.de/pid/g/OrnaGrumberg.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_32) Decidable Synthesis of Programs with Uninterpreted Functions.
+	[Paul Krogmeier](https://dblp.org/pid/244/2375.html), [Umang Mathur](https://dblp.org/pid/137/7835.html), [Adithya Murali](https://dblp.org/pid/234/8538.html), [P. Madhusudan](https://dblp.org/pid/m/PMadhusudan.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_25) [[PRISM-games]] 3.0 - Stochastic Game Verification with Concurrency, Equilibria and Time.
+	[Marta Kwiatkowska](https://dblp.org/pid/k/MartaZKwiatkowska.html), [Gethin Norman](https://dblp.org/pid/59/1659.html), [David Parker](https://dblp.org/pid/33/3095.html), [Gabriel Santos](https://dblp.org/pid/19/7786.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_24) [[AMYTISS]] - Parallelized Automated Controller Synthesis for Large-Scale Stochastic Systems.
+	[Abolfazl Lavaei](https://dblp.org/pid/202/7474.html), [Mahmoud Khaled](https://dblp.org/pid/153/9945.html), [Sadegh Soudjani](https://dblp.org/pid/23/10279.html), [Majid Zamani](https://dblp.org/pid/34/9188.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_12) [[Ivy]] - A Multi-modal Verification Tool for Distributed Algorithms.
+	[Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html), [Oded Padon](https://dblp.org/pid/155/8122.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_19) Widest Paths and Global Propagation in Bounded Value Iteration for Stochastic Games.
+	[Kittiphon Phalakarn](https://dblp.org/pid/187/5700.html), [Toru Takisaka](https://dblp.org/pid/156/0024.html), [Thomas Haas](https://dblp.org/pid/115/7079.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_14) Local Reasoning About the Presence of Bugs - Incorrectness Separation Logic.
+	[Azalea Raad](https://dblp.org/pid/84/9528.html), [Josh Berdine](https://dblp.org/pid/61/1623.html), [Hoang-Hai Dang](https://dblp.org/pid/201/8129.html), [Derek Dreyer](https://dblp.org/pid/d/DerekDreyer.html), [Peter W. O'Hearn](https://dblp.org/pid/o/PeterWOHearn.html), [Jules Villard](https://dblp.org/pid/79/6376.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_23) [[STMC]] - Statistical Model Checker with Stratified and Antithetic Sampling.
+	[Nima Roohi](https://dblp.org/pid/93/7539.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Matthew West](https://dblp.org/pid/16/1726-1.html), [Geir E. Dullerud](https://dblp.org/pid/d/GeirEDullerud.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_33) Must Fault Localization for Program Repair.
+	[Bat-Chen Rothenberg](https://dblp.org/pid/189/1034.html), [Orna Grumberg](https://dblp.org/pid/g/OrnaGrumberg.html)
 	Implemented in [[AllRepair]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_9) [[Code2Inv]] - A Deep Learning Framework for Program Verification.
-	[Xujie Si](https://dblp.uni-trier.de/pid/142/8449.html), [Aaditya Naik](https://dblp.uni-trier.de/pid/269/9481.html), [Hanjun Dai](https://dblp.uni-trier.de/pid/144/7311.html), [Mayur Naik](https://dblp.uni-trier.de/pid/92/6794.html), [Le Song](https://dblp.uni-trier.de/pid/94/3481.html)
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_6) Action-Based Model Checking - Logic, Automata, and Reduction.
-	[Stephen F. Siegel](https://dblp.uni-trier.de/pid/50/540.html), [Yihao Yan](https://dblp.uni-trier.de/pid/269/9604.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_9) [[Code2Inv]] - A Deep Learning Framework for Program Verification.
+	[Xujie Si](https://dblp.org/pid/142/8449.html), [Aaditya Naik](https://dblp.org/pid/269/9481.html), [Hanjun Dai](https://dblp.org/pid/144/7311.html), [Mayur Naik](https://dblp.org/pid/92/6794.html), [Le Song](https://dblp.org/pid/94/3481.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_6) Action-Based Model Checking - Logic, Automata, and Reduction.
+	[Stephen F. Siegel](https://dblp.org/pid/50/540.html), [Yihao Yan](https://dblp.org/pid/269/9604.html)
 	Implemented in [[McRERS]]
--	[![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53291-8_15) Maximum Causal Entropy Specification Inference from Demonstrations.
-	[Marcell Vazquez-Chanlatte](https://dblp.uni-trier.de/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_15) Maximum Causal Entropy Specification Inference from Demonstrations.
+	[Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
 	Implemented https://github.com/mvcisback/mce-spec-inference/
